--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="save_btn_label">Save</string>
     <string name="clear_btn_label">Clear</string>
     <string name="remove_btn_label">- Remove Calling</string>
+
+    <string name="ok">Ok</string>
+    <string name="error">Error</string>
+    <string name="error_service_unavailable">No data connection</string>
+    <string name="error_lost_connection">Connection was here, but it\'s not now</string>
 </resources>
