--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,8 +3,8 @@
     <string name="app_name">Calling WorkFlow</string>
     <string name="select_status_group">Select group of callings</string>
     <string name="add_btn_label">+ New Calling</string>
-    <string name="search_label">Search</string>
     <string name="filter_label">Filter</string>
+    <string name="sort_label">Sort</string>
     <string-array name="filters_list">
         <item>Pending</item>
         <item>Completed</item>
