--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,7 +16,8 @@
 
     <string name="save_btn_label">Save</string>
     <string name="clear_btn_label">Clear</string>
-    <string name="remove_btn_label">- Remove Calling</string>
+    <string name="delete_btn_label">Delete</string>
+    <string name="confirmation_message">Delete this Calling?</string>
 
     <string name="cancel_btn_label">Cancel</string>
     <string name="calling_label">Calling</string>
