--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="save_btn_label">Save</string>
     <string name="clear_btn_label">Clear</string>
     <string name="remove_btn_label">- Remove Calling</string>
+    <string name="update_status_label">Update Status</string>
 
     <string name="cancel_btn_label">Cancel</string>
     <string name="calling_label">Calling</string>
